--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"></link>
+    <link rel="stylesheet" href=".style.css"></link>
     <title>Document</title>
 </head>
 <body>
@@ -26,7 +26,6 @@
     <button id="delete-select">Eliminar un contacto en concreto</button>
     <h2>Contactos Guardados:</h2>
     <div id="contact-list" class="contact-list"></div>
-
-    <script src="index.js"></script>
+    <script src=".index.js"></script>
 </body>
 </html>
